Olympus/src/objects/HSFE_Exception_Log__c.object
<CustomObject>
    <description>This is used to store the exception.</description>
    <fields>
        <fullName>HSFE_ExceptionDescription__c</fullName>
        <inlineHelpText>Detail description.</inlineHelpText>
        <label>ExceptionDescription</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSFE_Exception_Line_Number__c</fullName>
        <label>Exception Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSFE_Exception_Stack_Trace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Exception</fullName>
        <columns>NAME</columns>
        <columns>HSFE_Exception_Stack_Trace__c</columns>
        <columns>HSFE_Exception_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Exception</label>
    </listViews>
    <nameField>
        <displayFormat>HSFE-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>